--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -19,6 +19,23 @@
   publisher={Elsevier}
 }
 
+@article{barreda-nearey2012,
+  title = {The Direct and Indirect Roles of Fundamental Frequency in Vowel Perception},
+  author = {Barreda, Santiago and Nearey, Terrance M},
+  year = {2012},
+  month = jan,
+  journal = {The Journal of the Acoustical Society of America},
+  volume = {131},
+  number = {1},
+  pages = {466--477},
+  publisher = {{Acoustical Society of America}},
+  issn = {0001-4966},
+  doi = {10.1121/1.3662068},
+  urldate = {2023-01-27},
+  abstract = {Several experiments have found that changing the intrinsic f0 of a vowel can have an effect on perceived vowel quality. It has been suggested that these shifts may occur because f0 is involved in the specification of vowel quality in the same way as the formant frequencies. Another possibility is that f0 affects vowel quality indirectly, by changing a listener's assumptions about characteristics of a speaker who is likely to have uttered the vowel. In the experiment outlined here, participants were asked to listen to vowels differing in terms of f0 and their formant frequencies and report vowel quality and the apparent speaker's gender and size on a trial-by-trial basis. The results presented here suggest that f0 affects vowel quality mainly indirectly via its effects on the apparent-speaker characteristics; however, f0 may also have some residual direct effects on vowel quality. Furthermore, the formant frequencies were also found to have significant indirect effects on vowel quality by way of their strong influence on the apparent speaker.},
+  file = {/Users/anpe7128/Zotero/storage/TS7AJ6EJ/Barreda and Nearey - 2012 - The direct and indirect roles of fundamental frequ.pdf}
+}
+
 @article{barreda-nearey2018,
   title = {A Regression Approach to Vowel Normalization for Missing and Unbalanced Data},
   author = {Barreda, Santiago and Nearey, Terrance M},
@@ -866,6 +883,16 @@
   address = {Uppsala}
 }
 
+@incollection{lindblom1998,
+  title={Systemic constraints and adaptive change in the formation of sound structure},
+  author={Lindblom, Bj{\"o}rn},
+  editor={Hurford J.R. and Studdert-Kennedy M. and Knight C.},
+  booktitle={Approaches to the evolution of language: Social and cognitive bases},
+  pages={242--264},
+  year={1998},
+  publisher={Cambridge University Press Cambridge, United Kingdom}
+}
+
 @article{lubowicz2011,
   title={Chain shifts},
   author={{\L}ubowicz, Anna},
@@ -984,6 +1011,14 @@
   number={1},
   year={2013},
   organization={AIP Publishing}
+}
+
+@inproceedings{pape-mooshammer2006,
+  title={Intrinsic F0 differences for German tense and lax vowels},
+  author={Pape, Daniel and Mooshammer, Christine},
+  booktitle={Proceedings of the 7th International Seminar on Speech Production in Ubatuba, Brazil, December 13th to 15th},
+  pages={271--278},
+  year={2006}
 }
 
 @inproceedings{pelzer-boersma2019,
