--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -10,7 +10,7 @@
 }
 
 @article{baayen2017,
-  title={The cave of shadows: Addressing the human factor with generalized additive mixed models},
+  title={The cave of shadows: {A}ddressing the human factor with generalized additive mixed models},
   author={Baayen, Harald and Vasishth, Shravan and Kliegl, Reinhold and Bates, Douglas},
   journal={Journal of Memory and Language},
   volume={94},
@@ -91,7 +91,7 @@
 }
 
 @book{bleckert1987,
-  title = {Centralsvensk diftongering som satsfonetiskt problem {[Diphthongization in Central Swedish as a problem of sentence phonetics]}},
+  title = {Centralsvensk diftongering som satsfonetiskt problem {[Diphthongization in {C}entral {S}wedish as a problem of sentence phonetics]}},
   author = {Bleckert, Lars},
   year = {1987},
   publisher = {Skrifter Utgivna Av {{Institutionen}} F\"or Nordiska Spr\aa k Vid {{Uppsala}} Universitet},
@@ -115,7 +115,7 @@
 
 @article{boberg2019,
   author = {Charles Boberg},
-  title ={A Closer Look at the Short Front Vowel Shift in Canada},
+  title ={A Closer Look at the Short Front Vowel Shift in {C}anada},
   journal = {Journal of English Linguistics},
   volume = {47},
   number = {2},
@@ -125,7 +125,7 @@
 }
 
 @article{bradlow1995,
-  title={A comparative acoustic study of English and Spanish vowels},
+  title={A comparative acoustic study of {E}nglish and {S}panish vowels},
   author={Bradlow, Ann R},
   journal={The Journal of the Acoustical Society of America},
   volume={97},
@@ -136,7 +136,7 @@
 }
 
 @article{brand2021,
-  title={Systematic co-variation of monophthongs across speakers of New Zealand English},
+  title={Systematic co-variation of monophthongs across speakers of {N}ew {Z}ealand {E}nglish},
   author={Brand, James and Hay, Jen and Clark, Lynn and Watson, Kevin and S{\'o}skuthy, M{\'a}rton},
   journal={Journal of Phonetics},
   volume={88},
@@ -162,7 +162,7 @@
 
 @book{bruce2010,
   author={Bruce, G{\"o}sta},
-  title={V{\aa}r fonetiska geografi : om svenskans accenter, melodi och uttal {[Our phonetic geography: about the accents, melody and pronunciation of Swedish]}},
+  title={V{\aa}r fonetiska geografi : om svenskans accenter, melodi och uttal {[Our phonetic geography: about the accents, melody and pronunciation of {S}wedish]}},
   publisher={Studentlitteratur},
   address={Lund},
   year={2010},
@@ -190,7 +190,7 @@
 }
 
 @article{clopper2005,
-  title={Acoustic characteristics of the vowel systems of six regional varieties of American English},
+  title={Acoustic characteristics of the vowel systems of six regional varieties of {A}merican {E}nglish},
   author={Clopper, Cynthia G and Pisoni, David B and De Jong, Kenneth},
   journal={The Journal of the Acoustical society of America},
   volume={118},
@@ -229,7 +229,7 @@
 
 @book{elert1964,
   author={Elert, Claes-Christian},
-  title={Phonologic studies of quantity in Swedish: based on material from {Stockholm} speakers},
+  title={Phonologic studies of quantity in {S}wedish: based on material from {Stockholm} speakers},
   publisher={Almqwist {\&} Wiksell},
   address={Uppsala},
   year={1964},
@@ -238,7 +238,7 @@
 }
 
 @article{elert1980,
-  title={Diftongeringar och konsonantinslag: Drag i uttalet av l{\aa}nga vokaler i svenskan av i dag {[Diphthongizations and consonantal offglides: Traits in the pronunciation of long vowels in the Swedish of today]}},
+  title={Diftongeringar och konsonantinslag: Drag i uttalet av l{\aa}nga vokaler i svenskan av i dag {[Diphthongizations and consonantal offglides: Traits in the pronunciation of long vowels in the {S}wedish of today]}},
   author={Elert, Claes-Christian},
   journal={Spr{\aa}ken i v{\aa}rt spr{\aa}k},
   pages={168--181},
@@ -246,7 +246,7 @@
 }
 
 @book{elert1981,
-  title ={Ljud Och Ord i Svenskan {[Sounds and words in Swedish language]}},
+  title ={Ljud Och Ord i Svenskan {[Sounds and words in {S}wedish language]}},
   author = {Elert, Claes-Christian},
   year = {1981},
   series = {Acta {{Universitatis Umensis}}},
@@ -259,7 +259,7 @@
 }
 
 @incollection{elert1994,
-  title = {Indelning Och Gr\"anser Inom Omr\aa det F\"or Den Talade Svenskan: {{En}} Aktuell Dialektografi {[Distribution and boundaries within the area of spoken Swedish: An up-to-date dialectography]}},
+  title = {Indelning Och Gr\"anser Inom Omr\aa det F\"or Den Talade Svenskan: {{En}} Aktuell Dialektografi {[Distribution and boundaries within the area of spoken {S}wedish: An up-to-date dialectography]}},
   booktitle = {Kulturgr\"anser - Myt Eller Verklighet?},
   author = {Elert, Claes-Christian},
   year = {1994},
@@ -270,7 +270,7 @@
 }
 
 @book{elert2000,
-  title = {{Allm\"an och svensk fonetik} {[General and Swedish phonetics]}},
+  title = {{Allm\"an och svensk fonetik} {[{G}eneral and {S}wedish phonetics]}},
   author = {Elert, Claes-Christian},
   year = {2000},
   edition = {8., omarb. uppl},
@@ -281,7 +281,7 @@
 }
 
 @article{eliasson2000,
-  title = {Typologiska Och Areallingvistiska Aspekter P\aa{} de Nordeuropeiska Spr\aa kens Fonologi {[Typological and area linguistic aspects of the phonology of the Northern European languages]}},
+  title = {Typologiska Och Areallingvistiska Aspekter P\aa{} de Nordeuropeiska Spr\aa kens Fonologi {[Typological and area linguistic aspects of the phonology of the {N}orthern {E}uropean languages]}},
   author = {Eliasson, Stig},
   year = {2000},
   pages = {21--70},
@@ -318,7 +318,7 @@
 }
 
 @article{engstrand2000,
-  title = {{Hur udda \"ar Viby-i? Experimentella och typologiska observationer} {[How peculiar is Viby-i? Experimental and typological observations]}},
+  title = {{Hur udda \"ar {V}iby-i? Experimentella och typologiska observationer} {[How peculiar is {V}iby-i? Experimental and typological observations]}},
   author = {Engstrand, Olle and Bj{\"o}rsten, Sven and Lindblom, Bj{\"o}rn and Bruce, G{\"o}sta and Eriksson, Anders},
   year = {2000},
   journal = {Folkm\aa lsstudier},
@@ -340,7 +340,7 @@
 
 @inproceedings{eriksson2004,
   author={Eriksson, Anders},
-  title={SweDia 2000: A Swedish dialect database.},
+  title={SweDia 2000: A {S}wedish dialect database.},
   year=2004,
   editor={Henrichsen, P. J.},
   booktitle={Babylonian confusion resolved. Proceedings of the Nordic symposium on the comparison of languages, no. 1 in Copenhagen Working Papers in LSP},
@@ -365,7 +365,7 @@
 }
 
 @article{fant1959,
-  title = {Acoustic Analysis and Synthesis of Speech with Applications to Swedish},
+  title = {Acoustic Analysis and Synthesis of Speech with Applications to {S}wedish},
   author = {Fant, Gunnar},
   year = {1959},
   journal = {Ericsson Technics},
@@ -445,7 +445,7 @@
 }
 
 @book{gross2018,
-  title={Mapping vowels: Variation and change in the speech of Gothenburg adolescents},
+  title={Mapping vowels: Variation and change in the speech of {G}othenburg adolescents},
   author={Gross, Johan},
   series = {Doctoral Theses from University of Gothenburg},
   publisher = {University of Gothenburg},
@@ -510,7 +510,7 @@
 }
 
 @article{hadding1976,
-  title = {Facial muscle activity in the production of Swedish vowels: an electromyographic study},
+  title = {Facial muscle activity in the production of {S}wedish vowels: an electromyographic study},
   journal = {Journal of Phonetics},
   volume = {4},
   number = {3},
@@ -525,7 +525,7 @@
 }
 
 @article{hammarstrom-norman1957,
-  title = {Om den frikativa slutfasen vid de svenska l{\aa}nga vokalerna i, y, u, w.{[On the final fricative phase in the Swedish long vowels i, y, u, w.]}},
+  title = {Om den frikativa slutfasen vid de svenska l{\aa}nga vokalerna i, y, u, w.{[On the final fricative phase in the {S}wedish long vowels i, y, u, w.]}},
   author = {G Hammarstr{\"o}m and L. Norman},
   journal={Nordisk tidsskrift for tale og stemme},
   volume = {17},
@@ -567,7 +567,7 @@
 }
 
 @article{hillenbrand1995,
-  title = {Acoustic Characteristics of American English Vowels},
+  title = {Acoustic Characteristics of {A}merican {E}nglish Vowels},
   author = {Hillenbrand, James M and Getty, Laura A and Clark, Michael J and Wheeler, Kimberlee},
   year = {1995},
   journal = {The Journal of the Acoustical Society of America},
@@ -752,7 +752,7 @@
 }
 
 @book{kuronen2000,
-  title = {{Vokaluttalets akustik i sverigesvenska, finlandssvenska och finska {[The acoustics of vowel pronunciation in Sweden Swedish, Finland Swedish and Finnish]}}},
+  title = {{Vokaluttalets akustik i sverigesvenska, finlandssvenska och finska {[The acoustics of vowel pronunciation in {S}weden {S}wedish, {F}inland {S}wedish and {F}innish]}}},
   author = {Kuronen, Mikko},
   year = {2000},
   series = {{Studia philologica Jyv\"askyl\"aensia}},
@@ -804,10 +804,13 @@
 }
 
 @book{labov-boberg2005,
-  title = {The atlas of North American English: Phonetics, phonology, and sound change},
+  title = {The atlas of {N}orth {A}merican {E}nglish: Phonetics, phonology, and sound change},
   author = {Labov, William and Ash, Sharon and Boberg, Charles},
   year = {2005},
   publisher = {{De Gruyter Mouton}},
+  address = {Berlin • New York},
+  doi = {doi:10.1515/9783110167467},
+  isbn = {9783110206838}
 }
 
 @article{Ladefoged1957,
@@ -831,7 +834,7 @@
 }
 
 @inproceedings{leinonen1982,
-  title = {Rikssvenskt och finlandssvenskt ljudsystem ur perceptionssynpunkt {[Perceptual perspectives on the sound systems of Standard Swedish and Finland Swedish]}},
+  title = {Rikssvenskt och finlandssvenskt ljudsystem ur perceptionssynpunkt {[Perceptual perspectives on the sound systems of {S}tandard {S}wedish and {F}inland {S}wedish]}},
   booktitle = {X Fonetiikan p{\"a}iv{\"a}t},
   author = {Leinonen, Kari and Pitk{\"a}nen, Antti J., and Vihanta, Veijo V.},
   year = {1981},
@@ -855,7 +858,7 @@
 }
 
 @article{leung2016,
-  title={Acoustic characteristics of clearly spoken English tense and lax vowels},
+  title={Acoustic characteristics of clearly spoken {E}nglish tense and lax vowels},
   author={Leung, Keith KW and Jongman, Allard and Wang, Yue and Sereno, Joan A},
   journal={The Journal of the Acoustical Society of America},
   volume={140},
@@ -903,7 +906,7 @@
 }
 
 @article{maclagan-hay2007,
-  title={Getting fed up with our feet: Contrast maintenance and the New Zealand English “short” front vowel shift},
+  title={Getting fed up with our feet: Contrast maintenance and the {N}ew {Z}ealand {E}nglish “short” front vowel shift},
   author={Maclagan, Margaret and Hay, Jennifer},
   journal={Language variation and change},
   volume={19},
@@ -996,7 +999,7 @@
 }
 
 @article{nilsson2021,
-  title={New and old social meanings in urban and rural Sweden},
+  title={New and old social meanings in urban and rural {S}weden},
   author={Nilsson, Jenny and Wenner, Lena and Leinonen, Therese and Thorselius, Eva},
   journal={Urban Matters},
   pages={179},
@@ -1014,7 +1017,7 @@
 }
 
 @inproceedings{pape-mooshammer2006,
-  title={Intrinsic F0 differences for German tense and lax vowels},
+  title={Intrinsic F0 differences for {G}erman tense and lax vowels},
   author={Pape, Daniel and Mooshammer, Christine},
   booktitle={Proceedings of the 7th International Seminar on Speech Production in Ubatuba, Brazil, December 13th to 15th},
   pages={271--278},
@@ -1035,7 +1038,7 @@
 }
 
 @article{persson-jaeger2023,
-  title = {Evaluating normalization accounts against the dense vowel space of Central Swedish},
+  title = {Evaluating normalization accounts against the dense vowel space of {C}entral {S}wedish},
   author = {Persson, Anna and Jaeger, T Florian},
   year = {2023},
   journal = {Frontiers in Psychology},
@@ -1048,7 +1051,7 @@
 
 @inproceedings{persson-jaeger2024,
   author = {Persson, Anna and Jaeger, T. Florian},
-  title  = {{Measuring the informativity of F3 for rounded and unrounded high-front vowels in Central Swedish}},
+  title  = {{Measuring the informativity of F3 for rounded and unrounded high-front vowels in {C}entral {S}wedish}},
   booktitle = {{Proceedings from FONETIK 2024, Stockholm, June 3–5, 2024}},
   year = 2024,
   pages = {13–18},
@@ -1060,7 +1063,7 @@
 }
 
 @manuscript{persson2024,
-  title = {Comparing accounts of formant normalization against US English listeners' vowel perception},
+  title = {Comparing accounts of formant normalization against {US} {E}nglish listeners' vowel perception},
   author = {Persson, Anna and Barreda, Santiago and Jaeger, T Florian},
   year = {2024},
   publisher = {manuscript; Stockholm University}
@@ -1112,7 +1115,7 @@
   }
 
 @article{renwick-stanley2020,
-  title = {Modeling dynamic trajectories of front vowels in the American South},
+  title = {Modeling dynamic trajectories of front vowels in the {A}merican {S}outh},
   author = {Renwick, Margaret E L and Stanley, Joseph A},
   year = {2020},
   journal = {The Journal of the Acoustical Society of America},
@@ -1187,7 +1190,7 @@
 }
 
 @article{schertz2013,
-  title={Exaggeration of featural contrasts in clarifications of misheard speech in English},
+  title={Exaggeration of featural contrasts in clarifications of misheard speech in {E}nglish},
   author={Schertz, Jessamyn},
   journal={Journal of Phonetics},
   volume={41},
@@ -1213,7 +1216,7 @@
 }
 
 @inproceedings{schotz2011,
-  title = {Exotic vowels in Swedish – an articulographic and acoustic pilot study of /i:/},
+  title = {Exotic vowels in {S}wedish – an articulographic and acoustic pilot study of /i:/},
   booktitle = {Proceedings of the 17th {{International Congress}} of {{Phonetic Sciences}}},
   author = {Sch{\"o}tz, Susanne and Frid, Johan and L{\"o}fqvist, Anders},
   year = {2011},
@@ -1354,7 +1357,7 @@ year = {2018}
 }
 
 @article{strangert2001,
-  title={Quantity in ten Swedish dialects in Northern Sweden and {\"O}sterbotten in Finland},
+  title={Quantity in ten {S}wedish dialects in {N}orthern {S}weden and {\"O}sterbotten in {F}inland},
   author={Strangert, Eva},
   journal={Working papers/Lund University, Department of Linguistics and Phonetics},
   volume={49},
@@ -1363,7 +1366,7 @@ year = {2018}
 }
 
 @article{syrdal1985,
-  title = {Aspects of a Model of the Auditory Representation of American English Vowels},
+  title = {Aspects of a Model of the Auditory Representation of {A}merican {E}nglish Vowels},
   author = {Syrdal, Ann K},
   year = {1985},
   month = aug,
@@ -1381,7 +1384,7 @@ year = {2018}
 
 @article{watson-harrington1999,
     author = {Watson, Catherine I. and Harrington, Jonathan},
-    title = "{Acoustic evidence for dynamic formant trajectories in Australian English vowels}",
+    title = "{Acoustic evidence for dynamic formant trajectories in {A}ustralian {E}nglish vowels}",
     journal = {The Journal of the Acoustical Society of America},
     volume = {106},
     number = {1},
@@ -1414,7 +1417,7 @@ year = {2018}
 }
 
 @book{wenner2010,
-  title = {N\"ar L\"ognare Blir Lugnare. En sociofonetisk studie av sammanfallet mellan kort \"o och kort u i uppl\"andskan {[When lögnare become lugnare. A sociophonetic study of the merger between short \"o and short u in Uppland Swedish]}},
+  title = {N\"ar L\"ognare Blir Lugnare. En sociofonetisk studie av sammanfallet mellan kort \"o och kort u i uppl\"andskan {[When lögnare become lugnare. A sociophonetic study of the merger between short \"o and short u in {U}ppland {S}wedish]}},
   author = {Wenner, Lena},
   year = {2010},
   publisher = {Uppsala Universitet},
@@ -1447,7 +1450,7 @@ author = {D.H. Whalen and Andrea G. Levitt}
 
 @article{woods1997,
   author = {Woods, Nicola J.},
-  title = {The Formation and Development of New Zealand English: Interaction of Gender-Related Variation and Linguistic Change},
+  title = {The Formation and Development of {N}ew {Z}ealand {E}nglish: Interaction of Gender-Related Variation and Linguistic Change},
   journal = {Journal of Sociolinguistics},
   volume = {1},
   number = {1},
@@ -1491,8 +1494,8 @@ author = {D.H. Whalen and Andrea G. Levitt}
 }
 
 @article{yang2019,
-  title={A comparison of normalized formant trajectories of English vowels produced by American men and women},
-  author={Yang, Byunggon and others},
+  title={A comparison of normalized formant trajectories of {E}nglish vowels produced by {A}merican men and women},
+  author={Yang, Byunggon},
   journal={Phonetics and Speech Sciences},
   volume={11},
   number={1},
